--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.10.16",
     "mongoose-delete": "^0.5.3",
     "mongoose-paginate-v2": "^1.3.11",
+    "multer": "^1.4.2",
     "validator": "^13.5.1"
   },
   "devDependencies": {
